k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: backend
  type: ClusterIP
